--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tibetan-ewts-converter",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Convert back and forth between Unicode and EWTS (Wylie-like Tibetan transliteration)",
   "main": "lib/EwtsConverter.js",
   "scripts": {
@@ -18,6 +18,10 @@
     "transliteration",
     "converter"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rogerespel/ewts-js"
+  },
   "author": "roger espel llima",
   "license": "Apache 2.0",
   "devDependencies": {
