add simple html front-ends bundled by esbuild; remove obsolete replaceAll polyfill

--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "tibetan-ewts-converter",
   "version": "2.0.0",
   "type": "module",
-
   "description": "Tibetan transliteration (Wylie, EWTS) and approximate phonetics",
   "keywords": [ "tibetan", "wylie", "ewts", "unicode", "transliteration", "converter", "phonetics" ],
   "author": "roger espel llima",
   "license": "Apache 2.0",
-
+  "scripts": {
+    "build": "esbuild src/demo/ewts.js --bundle --outfile=htdocs/ewts.js --minify; esbuild src/demo/phonetics.js --bundle --outfile=htdocs/phonetics.js --minify"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/rogerespel/ewts-js"
   },
-
   "exports": {
     "./EwtsConverter": "./src/EwtsConverter.mjs",
     "./TibetanPhonetics": "./src/TibetanPhonetics.mjs",
@@ -20,5 +20,8 @@
     "./TibetanPhonetics-Lhasey": "./src/TibetanPhonetics-Lhasey.mjs",
     "./TibetanPhonetics-Padmakara": "./src/TibetanPhonetics-Padmakara.mjs",
     "./TibetanPhonetics-Rigpa": "./src/TibetanPhonetics-Rigpa.mjs"
+  },
+  "devDependencies": {
+    "esbuild": "^0.27.0"
   }
 }
