--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "Apache 2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rogerespel/ewts-js"
+    "url": "git+https://github.com/rogerespel/ewts-js.git"
   },
   "exports": {
     ".": "./src/index.mjs",
